--- a/flutter_application_3/pubspec.yaml
+++ b/flutter_application_3/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   fluttertoast: ^8.0.9
   cloud_firestore: ^3.1.10
   url_launcher: ^6.0.20
+  google_fonts: ^2.3.1
 
 dev_dependencies:
   flutter_test:
